[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Benny/Jump1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Benny/Jump2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Benny/pullUp2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Benny/pullUp3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Benny/pullUp4.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Benny/Slide1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Benny/Slide3.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Benny/Slide2.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Benny/Hang.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Benny/Fall1.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Benny/Fall2.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Benny/Idle.png" type="Texture" id=13]
[ext_resource path="res://Objects/ParallaxLayer.gd" type="Script" id=14]
[ext_resource path="res://Sprites/Background.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Background2.png" type="Texture" id=16]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 6.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": false,
"name": "Jump",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": false,
"name": "PullUp",
"speed": 15.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "Slide",
"speed": 8.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": false,
"name": "Hang",
"speed": 1.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "Fall",
"speed": 10.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": false,
"name": "Idle",
"speed": 1.0
} ]

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
maxSpeed = 5000
jumpHeight = 150
gravity = 5
acceleration = 1000
friction = 0.2
afterjumpTime = 0.21

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Idle"

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1

[node name="ParallaxBackground" type="ParallaxBackground" parent="Camera2D"]
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="Camera2D/ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 256, 256 )
script = ExtResource( 14 )

[node name="Sprite" type="Sprite" parent="Camera2D/ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 15 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Camera2D/ParallaxBackground"]
motion_scale = Vector2( 0.07, 0.07 )
motion_mirroring = Vector2( 256, 256 )
script = ExtResource( 14 )

[node name="Sprite" type="Sprite" parent="Camera2D/ParallaxBackground/ParallaxLayer2"]
texture = ExtResource( 16 )
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="Camera2D/ParallaxBackground"]
motion_scale = Vector2( 0.04, 0.04 )
motion_mirroring = Vector2( 256, 256 )
script = ExtResource( 14 )

[node name="Sprite" type="Sprite" parent="Camera2D/ParallaxBackground/ParallaxLayer3"]
texture = ExtResource( 16 )
centered = false

[node name="Afterjump" type="Timer" parent="."]
one_shot = true

[node name="LedgeRay" type="RayCast2D" parent="."]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 4

[node name="Tween" type="Tween" parent="."]

[node name="SlipTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="MovementAudio" type="AudioStreamPlayer" parent="."]
volume_db = -20.0
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="timeout" from="Afterjump" to="." method="_on_Afterjump_timeout"]
